--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="response" id="mce-success-response" style="display:none"></div>
 		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f24d8d759202f83d929a67b5_f855363bd9" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="button btn"></div>
+	    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
 	    </div>
 	</form>
 	</div>
