--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
+	
+	<!--Mailchimp-->
+	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+		#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+		/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+	</style>
+	<!--end-->	
 
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet">
@@ -16,12 +24,7 @@
   		<h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
   		<hr>
   		<!-- Begin Mailchimp Signup Form -->
-	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-		/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-	</style>
+	
 	<div id="mc_embed_signup">
 	<form action="https://gmail.us3.list-manage.com/subscribe/post?u=4f24d8d759202f83d929a67b5&amp;id=f855363bd9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 	    <div id="mc_embed_signup_scroll">
