--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	
-	<!--Mailchimp-->
-	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
 		#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+		#mc_embed_signup input{border:0;border-radius: 300px;}
 		/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 	</style>
-	<!--end-->	
-
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet">
   </head>
@@ -23,6 +21,7 @@
   	<header class="header">
   		<h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
   		<hr>
+
   		<!-- Begin Mailchimp Signup Form -->
 	
 	<div id="mc_embed_signup">
