--- a/index.html
+++ b/index.html
@@ -9,33 +9,36 @@
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
 		#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-		
+		#mc_embed_signup input{border:0;border-radius: 300px;}
 		/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 	</style>
     <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet" type-"text/css">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
 
   	<header class="header">
-  		<h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
-  		<hr>
+  		<div class="container">
+	  		<h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
+	  		<hr>
 
-  		<!-- Begin Mailchimp Signup Form -->
-	
-	<div id="mc_embed_signup">
-	<form action="https://gmail.us3.list-manage.com/subscribe/post?u=4f24d8d759202f83d929a67b5&amp;id=f855363bd9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-	    <div id="mc_embed_signup_scroll">
+	  		<!-- Begin Mailchimp Signup Form -->
 		
-		<div id="mce-responses" class="clear">
-			<div class="response" id="mce-error-response" style="display:none"></div>
-			<div class="response" id="mce-success-response" style="display:none"></div>
-		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f24d8d759202f83d929a67b5_f855363bd9" tabindex="-1" value=""></div>
-	    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
-	    </div>
-	</form>
+			<div id="mc_embed_signup">
+			<form action="https://gmail.us3.list-manage.com/subscribe/post?u=4f24d8d759202f83d929a67b5&amp;id=f855363bd9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+		    <div id="mc_embed_signup_scroll">
+			
+			<div id="mce-responses" class="clear">
+				<div class="response" id="mce-error-response" style="display:none"></div>
+				<div class="response" id="mce-success-response" style="display:none"></div>
+			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f24d8d759202f83d929a67b5_f855363bd9" tabindex="-1" value=""></div>
+		    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
+		    </div>
+		</form>
+		</div>
+
 	</div>
 	
 	<!--End mc_embed_signup-->
