--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 	</style>
     <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
