--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Startup</title>
 
     <!-- Google Fonts -->
@@ -14,7 +16,7 @@
 		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 	</style>
     <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
 
