--- a/index.html
+++ b/index.html
@@ -1,49 +1,124 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-		#mc_embed_signup input{border:0;border-radius: 300px;}
-		/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-		   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-	</style>
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-
-  	<header class="header">
-  		<div class="container">
-	  		<h1>THE BIGGEST STARTUP EVENT OF THE YEAR</h1>
-	  		<hr>
-
-	  		<!-- Begin Mailchimp Signup Form -->
-		
-			<div id="mc_embed_signup">
-			<form action="https://gmail.us3.list-manage.com/subscribe/post?u=4f24d8d759202f83d929a67b5&amp;id=f855363bd9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-		    <div id="mc_embed_signup_scroll">
-			
-			<div id="mce-responses" class="clear">
-				<div class="response" id="mce-error-response" style="display:none"></div>
-				<div class="response" id="mce-success-response" style="display:none"></div>
-			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4f24d8d759202f83d929a67b5_f855363bd9" tabindex="-1" value=""></div>
-		    <div class="clear"><input type="submit" value="Find out more" name="subscribe" id="mc-embedded-subscribe" class="btn"></div>
-		    </div>
-		</form>
-		</div>
-
-	</div>
-	
-	<!--End mc_embed_signup-->
-  	</header>
-
-  </body>
-
+    <head>
+        <title>ADD REMITTING | Home</title>
+        <link rel="icon" type="image/png" href="img/logo2.png">
+        <link rel="stylesheet" type="text/css" href="css/same.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    
+    <body>
+        <header>
+           <nav class="fixed-nav">
+           <input type="checkbox" name="nav" id="main-nav" class="nav__checkbox">
+           <label for="main-nav" class="nav__button">
+               <span class="nav__icon">&nbsp;</span>
+           </label>
+           <div class="f-nav__menu">
+               <ul class="f-nav__list">
+                   <input type="checkbox" id="sign" name="sign" class="f-nav__checkbox">
+                   <a href="#" class="f-nav__link"><li class="f-nav__item"><label for="sign" class="sign-in/up">Sign in/up</label></li></a>
+                   <input type="checkbox" id="back" class="sign__back">
+                    
+                   <div class="sign">
+                      <label for="back" class="sign__back-icon">&larr;</label>
+                       <div class="sign-in">
+                        <form action="#">
+                             <h2 class="form-heading">Sign in</h2>
+                              <div class="form-box">
+                                <input type="email" id="email-in" placeholder="Your Email" class="fill-in">
+                               <label for="email-in">Email</label>
+                              </div>
+                              <div class="form-box">
+                                <input type="password" id="pass-in" placeholder="Password" class="fill-in">
+                               <label for="pass-in">Password</label>
+                              </div>
+                              <button type="submit" class="btn">Sign in</button>
+                           </form>
+                       </div>
+                       <div class="sign-up">
+                          <form action="#">
+                               <h2 class="form-heading">Sign up</h2>
+                              <div class="form-box">
+                                <input type="email" id="name-up" placeholder="Your Email" class="fill-in">
+                               <label for="name-up">Name</label>
+                              </div>
+                              <div class="form-box">
+                                <input type="email" id="email-up" placeholder="Your Email" class="fill-in">
+                               <label for="email-up">Email</label>
+                              </div>
+                              <div class="form-box">
+                                <input type="password" id="pass-up" placeholder="Password" class="fill-in">
+                               <label for="pass-up">Password</label>
+                              </div>
+                              <button type="submit" class="btn">Sign up</button>
+                           </form>
+                       </div>
+                   </div>
+                   <a href="add.html" class="f-nav__link"><li class="f-nav__item">Advertisements</li></a>
+               </ul>
+           </div>
+       </nav>
+            <h1 class="heading-primary">ADD REMITTING</h1>
+            <span class="heading-sub">YOUR PRODUCT OUR RESPONSIBILITY</span>
+        </header>
+        <img src="img/header.png" class="h-a">
+        <section class="about">
+            <h2 class="heading-secondary">WHO ARE WE?</h2>
+            <div class="about__text">
+                <p class="paragraph">
+                  This website is for you if you want to know how your product will do in the market.Share your product with us before launching to know who will love and who will not.Know if people will like it or hate it and know why.  
+                </p>
+                <p class="paragraph">
+                    So, this is what we are we share your product to others for free and let you know did they like it or not and why.
+                </p>
+            </div>
+        </section>
+        <section class="slide-show">
+           <input type="radio" name="slide" id="slide1" checked>
+            <label for="slide1"><div class="slide-btn">&nbsp;</div></label>
+            <input type="radio" name="slide" id="slide2">
+            <label for="slide2"><div class="slide-btn">&nbsp;</div></label>
+            <input type="radio" name="slide" id="slide3">
+            <label for="slide3"><div class="slide-btn">&nbsp;</div></label>
+            <div class="slide1">
+               <figure class="slide1-img">
+                   <img src="img/sli1.jpg" alt="slide1" class="sli">
+                <img src="img/sli2.jpg" alt="slide1.5" class="sli1">
+               </figure>
+                <div class="slide__text">
+                    Our website is known all over the world and loved all over it. There are more than 20 billion users, so you can have the best survey.
+                </div>
+            </div>
+            <div class="slide2">
+               <figure class="slide2-img">
+                   <img src="img/sli3.jpg" alt="slide2" class="sli">
+                <img src="img/sli4.jpeg" alt="slide2.5" class="sli1">
+               </figure>
+                <div class="slide__text">
+                    Don't just take. You also got to give your feedbacks for other products and you may also enjoy the world of diversity.
+                </div>
+            </div>
+            <div class="slide3">
+               <figure class="slide3-img">
+                   <img src="img/sli5.jpeg" alt="slide3" class="sli">
+                <img src="img/sli6.jpg" alt="slide3.5" class="sli1">
+               </figure>
+                <div class="slide__text">
+                    You may not able to forget the beauty you are going to see now, so don't wait and click the navigation ison to sign up and if you have already signed up then don't just wander go sign in.
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer__items">
+                <ul class="footer__nav">
+                    <a href="#"><li>Top</li></a>
+                    <a href="#"><li>Advertisements</li></a>
+                </ul>
+                <div class="copy">
+                    Copyright &copy; 2018. Built and designed by Kailash Yadav.You may use this webpage as a example but copying it may result legal problems and if you are using some part of the designs the credit should be given to Kailash Yadav.
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
