--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ADD REMITTING | Home</title>
         <link rel="icon" type="image/png" href="img/logo2.png">
         <link rel="stylesheet" type="text/css" href="css/same.css">
